--- a/Package/manifest.json
+++ b/Package/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 2,
 	"name": "WCPL-TWMS Mods",
-	"version": "1.3.5.4",
+	"version": "1.4.0",
 	 
 	"author": "jasonalex",
 	
@@ -26,6 +26,10 @@
 			},
 		"default_title": "WCPL TWMS"
 	},
+	
+	"permissions":[
+		"storage"
+	],
 	
 	"web_accessible_resources": [
 		"images/*.png"
