--- a/Package/manifest.json
+++ b/Package/manifest.json
@@ -31,6 +31,11 @@
 		"storage"
 	],
 	
+	"options_ui": {
+		"page": "options/options.html",
+		"chrome_style": true
+	}
+	
 	"web_accessible_resources": [
 		"images/*.png"
 	]
