--- a/Package/manifest.json
+++ b/Package/manifest.json
@@ -1,11 +1,12 @@
 {
 	"manifest_version": 2,
-	"name": "WCPL-TWMS Mods",
-	"version": "1.4.7",
+	"name": "Damstra TWMS Mods for Curragh",
+	"short_name": "TWMS/WCPL Mods"
+	"version": "1.5.0",
 
 	"author": "jasonalex",
 
-	"description": "Modifications to the TWMS front-end for WCPL users",
+	"description": "Modifications to the Damstra TWMS front-end for Wesfarmers Curragh (WCPL) users",
 	"icons": { "16": "icons/icon16.png",
               "32": "icons/icon32.png",
               "48": "icons/icon48.png",
