--- a/Package/manifest.json
+++ b/Package/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 2,
 	"name": "Damstra TWMS Mods for Curragh",
-	"short_name": "TWMS/WCPL Mods"
+	"short_name": "TWMS/WCPL Mods",
 	"version": "1.5.0",
 
 	"author": "jasonalex",
